# rme-crystalserver-new

./: .gitignore  ALTERACOES_SAVE_MAPA.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build-ubuntu.yml  build-windows-cmake.yml  build-windows-solution.yml
data/: menubar.xml
data/creatures/: monsters.xml  npcs.xml
data/items/: items.xml
data/materials/tilesets/: blank.xml  borders.xml  nature_grass.xml
icons/: avoidable.xpm  monsters.xpm  npcs.xpm
source/: CMakeLists.txt  about_window.cpp  action.cpp  action.h  actions_history_window.cpp  actions_history_window.h  add_item_window.cpp  add_tileset_window.cpp  add_tileset_window.h  application.cpp  application.h  artprovider.cpp  artprovider.h  basemap.cpp  basemap.h  bitmap_to_map_converter.cpp  bitmap_to_map_converter.h  bitmap_to_map_window.cpp  bitmap_to_map_window.h  browse_tile_window.cpp  browse_tile_window.h  brush.cpp  brush.h  brush_enums.h  carpet_brush.cpp  client_assets.cpp  client_assets.h  common.cpp  common.h  common_windows.cpp  common_windows.h  complexitem.cpp  complexitem.h  const.h  container_properties_window.cpp  copybuffer.cpp  copybuffer.h  dcbutton.cpp  definitions.h  doodad_brush.cpp  (+145 more)
source/protobuf/: CMakeLists.txt  appearances.proto  mapdata.proto  staticdata.proto  staticmapdata.proto
vcproj/Project/: RME.vcxproj
